KommIT: Course homepage changes - correct layout issues
Rework the HTML structure and add more CSS hooks,
dispaly side blocks in 2 columns on medium screens,
add a »course_page/styles.less« file for easier CSS handling,
cleanup/remove redunent CSS rules,
remove the styles from the theme and collect all styles in the plugin.

Related to-do:KommIT: Course homepage changes
https://basecamp.com/2124401/projects/6174826/todolists/21164243

--- a/blocks/courses_site/styles.css
+++ b/blocks/courses_site/styles.css
@@ -39,10 +39,7 @@
 }
 
 .graphic_site {
-    image-rendering: auto;
     image-rendering: crisp-edges;
-    image-rendering: pixelated;
-    image-rendering: inherit;
     margin-bottom: 10px;
     margin-top: 10px;
     /* Responsive images (ensure images don't scale beyond their parents) */
