--- a/theme/kommit/less/theme/responsive.less
+++ b/theme/kommit/less/theme/responsive.less
@@ -314,16 +314,6 @@
         //min-height: 12em;
     }
 
-    // Switch home page layout to 100%
-    // -------------------------------------
-    .home_page_block_one {
-        width: 100%;
-    }
-
-    .home_page_block_two {
-        width: 100%;
-    }
-
     // footer adjustments
     // -------------------------------------
     #page-footer {
